--- a/app/views/components/toggle.html.erb
+++ b/app/views/components/toggle.html.erb
@@ -1,3 +1,5 @@
+<% set_breadcrumbs [["Toggle switch", component_path(:toggle)]] %>
+
 <%= render 'template',
            title: "Toggle switch Component",
            description: "Simple Toggle Switch" do %>
