--- a/app/views/components/_template.html.erb
+++ b/app/views/components/_template.html.erb
@@ -1,5 +1,7 @@
 <%# locals:(title:, description:) %>
 
+<% content_for(:title, "#{title} | Tailwind, ERB & Stimulus") %>
+
 <div class="container mx-auto px-4 my-6 sm:px-6 lg:px-8">
   <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow">
     <div class="px-4 py-5 sm:px-6">
@@ -10,7 +12,7 @@
         <%= description %>
       </p>
     </div>
-    <div class="px-4 py-5 sm:p-6 text-center">
+    <div class="px-4 py-5 sm:p-6 text-center h-96">
       <%= yield %>
     </div>
   </div>
