--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,6 +1,18 @@
-<% @available_templates.each do |template| %>
-  <div>
-    <%= link_to template, component_path(template),
-                class: "text-indigo-600 underline"%>
-  </div>
-<% end %>
+<h1 class="text-5xl font-extralight text-center">Tailwind Components with ERB and Stimulus</h1>
+
+<p class="text-lg leading-6 mt-12">
+  This site provides examples of Tailwind widgets using Simulus for animation and responsiveness.
+</p>
+
+<div class="flex flex-row space-x-2 mt-12">
+  <% @available_templates.each do |template| %>
+    <div class="overflow-hidden rounded-lg bg-white shadow">
+      <%= link_to component_path(template),
+                  class: "text-center text-gray-600 font-bold text-lg" do %>
+        <div class="px-4 py-5 sm:p-6 bg-orange-100 hover:bg-orange-600 hover:text-white">
+          <%= template %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
