--- a/app/views/components/select.html.erb
+++ b/app/views/components/select.html.erb
@@ -1,3 +1,5 @@
+<% set_breadcrumbs [["Select", component_path(:select)]] %>
+
 <%= render 'template',
            title: "Simple Native",
            description: "" do %>
