--- a/app/views/components/tabs.html.erb
+++ b/app/views/components/tabs.html.erb
@@ -1,3 +1,5 @@
+<% set_breadcrumbs [["Tabs", component_path(:tabs)]] %>
+
 <%= render 'template',
            title: "Tabs",
            description: "" do %>
