--- a/app/views/components/navigation.html.erb
+++ b/app/views/components/navigation.html.erb
@@ -1,9 +1,8 @@
+<% set_breadcrumbs [["Navigation", component_path(:navigation)]] %>
+
 <%= render 'template',
            title: "Navigation",
            description: "" do %>
-
-
-
 
   <nav class="bg-white shadow">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
