--- a/app/views/components/toggle.html.erb
+++ b/app/views/components/toggle.html.erb
@@ -8,8 +8,8 @@
           class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
           role="switch"
           aria-checked="false"
-          data-controller="toggle-switch"
-          data-action="click->toggle-switch#toggle"
+          data-controller="aria-checked"
+          data-action="click->aria-checked#toggle"
   >
     <span class="sr-only">Use setting</span>
     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
