--- a/app/views/components/toggle.html.erb
+++ b/app/views/components/toggle.html.erb
@@ -5,14 +5,17 @@
            description: "Simple Toggle Switch" do %>
   <!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
   <button type="button"
-          class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
+          class="switch--off relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
           role="switch"
           aria-checked="false"
-          data-controller="aria-checked"
-          data-action="click->aria-checked#toggle"
+          data-controller="switch"
+          data-action="click->switch#toggle"
   >
     <span class="sr-only">Use setting</span>
     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-    <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 translate-x-0 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"></span>
+    <span aria-hidden="true"
+          data-switch-target="toggle"
+          class="switch__toggle--off pointer-events-none inline-block h-5 w-5 translate-x-0 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"
+    ></span>
   </button>
 <% end %>
