--- a/app/views/components/tabs.html.erb
+++ b/app/views/components/tabs.html.erb
@@ -22,7 +22,8 @@
           <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
           <a href="javascript:void(0)"
              data-action="click->tablist#select"
-             class="whitespace-nowrap border-b-2 border-transparent px-1 py-4 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">My Account</a>
+             aria-current="page"
+             class="tablist__tab--selected whitespace-nowrap border-b-2 border-transparent px-1 py-4 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">My Account</a>
           <a href="javascript:void(0)"
              data-action="click->tablist#select"
              class="whitespace-nowrap border-b-2 border-transparent px-1 py-4 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Company</a>
