--- a/app/views/components/navigation.html.erb
+++ b/app/views/components/navigation.html.erb
@@ -11,7 +11,7 @@
       <li>A <code>aria_expanded</code> controller for the mobile menu.</li>
     </ul>
   </div>
-  <nav class="bg-white shadow">
+  <nav class="navigation-bar bg-white shadow">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 justify-between">
         <div class="flex">
@@ -20,7 +20,7 @@
           </div>
           <div class="hidden sm:ml-6 sm:flex sm:space-x-8" data-controller="tablist">
             <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-            <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-900" aria-current="page">Dashboard</a>
+            <a href="javascript:void(0)" data-action="click->tablist#select" class="tablist__tab--selected inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700" aria-current="page">Dashboard</a>
             <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
             <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Team</a>
             <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Calendar</a>
