--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -53,6 +53,14 @@
         @apply !border-indigo-500 !text-indigo-600
     }
 
+    .tablist__content--shown {
+        @apply block
+    }
+
+    .tablist__content--hidden {
+        @apply hidden
+    }
+
     .navigation-bar .tablist__tab--selected {
         @apply !text-gray-900
     }
