--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -42,7 +42,7 @@
 >
   <%= link_to "部屋・プラン", "",
               class: "px-4 inline-block py-4 h-16 text-lg border-b-4 border-blue-500" %>
-  <%= link_to "宿の紹介", hotel_description_path(@hotel),
+  <%= link_to "宿の紹介", hotel_features_path(@hotel),
               data: {action: "click->drawer-trigger#show", turbo_frame: :slide_drawer},
               class: "px-4 inline-block py-4 h-16 text-lg" %>
   <%= link_to "クチコミ", "",
