iphone pricing model

--- a/app/views/iphones/_option.html.erb
+++ b/app/views/iphones/_option.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (name:, value:, selected: false, title:, subtitle: nil, pricing_lines:[]) %>
-<%= label_tag [name, value].join('_'), class: "mt-4 flex justify-between p-4 block border-2 rounded-lg w-full cursor-pointer has-[:checked]:border-blue-500" do %>
+<%= label_tag [name, value].join('_'), class: "mt-4 flex justify-between items-center p-4 block border-2 rounded-lg w-full cursor-pointer has-[:checked]:border-blue-500" do %>
   <%= radio_button_tag name, value, selected,
                        class: "hidden",
                        onchange: "this.form.requestSubmit()"
