--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -21,7 +21,7 @@
   Other Rails Frontend Experiments
 </h2>
 
-<div class="flex flex-row space-x-2 mt-12">
+<div class="flex flex-row space-x-2 mt-12 flex-wrap">
   <% @available_projects.each do |name, url| %>
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <%= link_to url,
