--- a/app/views/iphones/show.html.erb
+++ b/app/views/iphones/show.html.erb
@@ -147,7 +147,7 @@
        data-action="click->accordion#toggle">
     <h3 class="flex justify-between text-xl cursor-pointer">
       <span>What is an eSIM?</span>
-      <div data-accordion-target="indicator" class="pt-2 transition-all duration-300">
+      <div data-accordion-target="toggle" class="pt-2 transition-all duration-300">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5"/>
         </svg>
