--- a/app/views/components/toggle.html.erb
+++ b/app/views/components/toggle.html.erb
@@ -5,17 +5,21 @@
            description: "Simple Toggle Switch" do %>
   <!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
   <button type="button"
-          class="switch--off relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
+          class="!bg-gray-200 relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
           role="switch"
           aria-checked="false"
           data-controller="switch"
-          data-action="click->switch#toggle"
+          data-switch-element-on-class="!bg-indigo-600"
+          data-switch-element-off-class="!bg-gray-200"
+          data-switch-toggle-on-class="!translate-x-5"
+          data-switch-toggle-off-class="!translate-x-0"
+          data-action="click->switch#toggle keydown.space:stop:prevent->switch#toggle"
   >
     <span class="sr-only">Use setting</span>
     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
     <span aria-hidden="true"
           data-switch-target="toggle"
-          class="switch__toggle--off pointer-events-none inline-block h-5 w-5 translate-x-0 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"
+          class="!translate-x-0 pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"
     ></span>
   </button>
 <% end %>
