--- a/app/views/components/navigation.html.erb
+++ b/app/views/components/navigation.html.erb
@@ -20,12 +20,27 @@
           <div class="flex flex-shrink-0 items-center">
             <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
           </div>
-          <div class="hidden sm:ml-6 sm:flex sm:space-x-8" data-controller="tablist">
+          <div class="hidden sm:ml-6 sm:flex sm:space-x-8"
+               data-controller="tablist"
+               data-tablist-selected-class="!text-gray-900 !border-indigo-500"
+          >
             <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-            <a href="javascript:void(0)" data-action="click->tablist#select" class="tablist__tab--selected inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700" aria-current="page">Dashboard</a>
-            <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
-            <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Team</a>
-            <a href="javascript:void(0)" data-action="click->tablist#select" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Calendar</a>
+            <a href="javascript:void(0)"
+               data-action="click->tablist#select"
+               data-tablist-target="control"
+               class="!text-gray-900 !border-indigo-500 inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700" aria-current="page">Dashboard</a>
+            <a href="javascript:void(0)"
+               data-action="click->tablist#select"
+               data-tablist-target="control"
+               class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Projects</a>
+            <a href="javascript:void(0)"
+               data-action="click->tablist#select"
+               data-tablist-target="control"
+               class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Team</a>
+            <a href="javascript:void(0)"
+               data-action="click->tablist#select"
+               data-tablist-target="control"
+               class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Calendar</a>
           </div>
         </div>
         <div class="hidden sm:ml-6 sm:flex sm:items-center">
