--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -4,7 +4,7 @@
   This site provides examples of Tailwind widgets using Simulus for animation and responsiveness.
 </p>
 
-<div class="flex flex-row space-x-2 mt-12">
+<div class="flex flex-row flex-wrap gap-4 mt-12">
   <% @available_templates.each do |template| %>
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <%= link_to component_path(template),
@@ -21,7 +21,7 @@
   Other Rails Frontend Experiments
 </h2>
 
-<div class="flex flex-row space-x-2 mt-12 flex-wrap">
+<div class="flex flex-row flex-wrap gap-4 mt-12 flex-wrap">
   <% @available_projects.each do |name, url| %>
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <%= link_to url,
