--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -14,8 +14,31 @@
       <tr class="group p-2" id="<%= dom_id(todo) %>">
         <td class="<%= 'highlight-on-appear' if flash[:new_todo_id] == todo.id %> p-2 border-gray-400 border-t group-[:first-child]:border-none">
           <div class="flex justify-between">
-            <div><%= todo.title %></div>
-            <%= button_to todo, method: :delete, data: {action: "click->todo#delete", todo_row_param: dom_id(todo)} do %>
+            <div class="flex">
+              <div class="w-16 flex" data-controller="todo-likes" data-todo-likes-liked-value="<%= todo.like? current_user %>">
+                <div>
+                  <div class="text-red-500 <%= todo.like?(current_user) ? '' : 'hidden' %>" data-todo-likes-target="liked">
+                    <%= button_to todo_likes_path(todo), method: :delete, data: {action: "click->todo-likes#unlikeOptimistic"} do %>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                        <path d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"/>
+                      </svg>
+                    <% end %>
+                  </div>
+                  <div class="<%= todo.like?(current_user) ? 'hidden' : '' %>" data-todo-likes-target="unliked">
+                    <%= button_to todo_likes_path(todo), method: :post, data: {action: "click->todo-likes#likeOptimistic"} do %>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"/>
+                      </svg>
+                    <% end %>
+                  </div>
+                </div>
+                <div>
+                  : <span data-todo-likes-target="count"><%= todo.likes_count %></span>
+                </div>
+              </div>
+              <%= todo.title %>
+            </div>
+            <%= button_to todo, method: :delete, data: { action: "click->todo#delete", todo_row_param: dom_id(todo) }, class: "w-6" do %>
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"/>
               </svg>
